# its-backend

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: rustfmt.yml
data/: init.sql
migrations/: 20240325072209_initial.sql
src/: main.rs  util.rs
src/api/: mod.rs  tag.rs
src/api/route/: author.rs  book.rs  index.rs  login.rs  mod.rs  objects.rs  tasks.rs  transitions.rs
src/database/: core.rs  mod.rs  repository.rs
src/model/: dto.rs  entity.rs  mapper.rs  mod.rs
src/processing/: extractor.rs  mod.rs
statistics/: analysis.ipynb  metrics.md
