[package]
name = "web_service"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
chrono = { version = "0.4.35", features = ["serde"] }
derive_more = "0.99.17"
dotenv = "0.15.0"
futures = "0.3.30"
log = "0.4.21"
poem = "2.0.1"
poem-openapi = { version = "4.0.1", features = ["swagger-ui", "uuid", "chrono"] }
pretty_env_logger = "0.5.0"
quote = "1.0.35"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
syn = "2.0.53"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono"] }
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros", "signal"] }
uuid = { version = "1.7.0", features = ["serde", "v4"] }
sqlx-cli = "0.7.4"
